// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama AssetHub remote proxy tests > register + remote_proxy_with_registered_proof > dispatch inner call via batch(register, proxy_with_registered_proof) > batch(register_proof, remote_proxy_with_registered_proof) 1`] = `
[
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Kusama AssetHub remote proxy tests > register + remote_proxy_with_registered_proof > reject call without prior proof registration > remote_proxy_with_registered_proof without registration 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x06000000",
          "index": 43,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama AssetHub remote proxy tests > register + remote_proxy_with_registered_proof > reject registered proof used in subsequent block > registered proof does not persist across blocks 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x06000000",
          "index": 43,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama AssetHub remote proxy tests > remote proxy (direct proof) > dispatch inner call with valid proof > remote_proxy dispatches inner call 1`] = `
[
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Kusama AssetHub remote proxy tests > remote proxy (direct proof) > dispatch with explicit force_proxy_type > remote_proxy with force_proxy_type matching proof 1`] = `
[
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Kusama AssetHub remote proxy tests > remote proxy (direct proof) > reject force_proxy_type superset (exact match required) > remote_proxy force_proxy_type requires exact match 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 43,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama AssetHub remote proxy tests > remote proxy (direct proof) > reject invalid proof > remote_proxy with invalid proof 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x02000000",
          "index": 43,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama AssetHub remote proxy tests > remote proxy (direct proof) > reject mismatched force_proxy_type > remote_proxy with mismatched force_proxy_type 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 43,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama AssetHub remote proxy tests > remote proxy (direct proof) > reject proxy with non-zero delay > remote_proxy with non-zero delay 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x04000000",
          "index": 43,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama AssetHub remote proxy tests > remote proxy (direct proof) > reject unknown anchor block > remote_proxy with unknown anchor block 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x01000000",
          "index": 43,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama AssetHub remote proxy tests > remote proxy (direct proof) > reject wrong signer > remote_proxy with wrong signer 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x05000000",
          "index": 43,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama AssetHub remote proxy tests > remote proxy call filtering > NonTransfer proxy allows remark > NonTransfer proxy allows remark via remote_proxy 1`] = `
[
  {
    "data": {
      "result": "Ok",
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;

exports[`Kusama AssetHub remote proxy tests > remote proxy call filtering > NonTransfer proxy blocks transfer > NonTransfer proxy blocks transfer via remote_proxy 1`] = `
[
  {
    "data": {
      "result": {
        "Err": {
          "Module": {
            "error": "0x05000000",
            "index": 0,
          },
        },
      },
    },
    "method": "ProxyExecuted",
    "section": "proxy",
  },
]
`;
